new question type added